--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
             </ol>
         </div>
     </div>
-	<script src="node_modules/.2.2.1@vue/dist/vue.min.js"></script>
-	<script src="node_modules/.1.2.1@vue-resource/dist/vue-resource.min.js"></script>
+	<script src="resource.js"></script>
+	<script src="vue.js"></script>
 	<script></script>
 	<script src="index.js"></script>
 </body>
